<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WateringScheduleFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:padding="9dp"
            android:src="@drawable/back_btn">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/watering_schedule"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/days"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/monday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/tuesday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkWednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/wednesday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkThursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/thursday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/friday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/saturday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/green"
                android:foregroundTint="@color/green"
                android:text="@string/sunday" />

            <TextView
                android:id="@+id/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/no_time_selected"
                android:textColor="@color/dark_green"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/timeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:width="200dp"
                android:height="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/select_time"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearBtn"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="29dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_white"
            android:text="@string/clear"
            android:textColor="@color/green" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="29dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_green"
            android:text="@string/update"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>