<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchByPhotoResultFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@id/btnTryAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/plantImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/plant_image"
                android:scaleType="centerCrop"
                android:src="@drawable/plant_img" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/is_it_what_you_are_looking_for"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTryAgain"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="29dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_white"
        android:text="@string/try_again"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSelect"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelect"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="29dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_green"
        android:text="@string/continue_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTryAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>