<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MicrocontrollerConnection">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:padding="9dp"
            android:src="@drawable/back_btn">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/microcontroller_connection"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/live_updates"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/updatesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/dark_green"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/disconnectBtn"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="29dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_white"
            android:text="@string/disconnect"
            android:textColor="@color/green" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connectBtn"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="29dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_green"
            android:text="@string/connect"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>